<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg"
        tools:context=".MainActivity">


        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/image_ic_calender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/timestamp"
                android:textColor="@color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/blue">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total_sales"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_total_sales"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/sales"
                        android:textColor="@color/light_green"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/blue">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/top_sales"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/text_title_partner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partner"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_partner_sales"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/sales"
                        android:textColor="@color/light_blue"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/arrow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail2"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:visibility="gone" />

            <include
                layout="@layout/fragment_lottery_sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <include
                layout="@layout/fragment_item1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:padding="10dp"
                android:text="กราฟยอดขายพาร์ทเนอร์"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.db.williamchart.view.LineChartView
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:padding="10dp"
                android:background="@color/white"
                app:chart_labelsColor="@color/black"
                app:chart_labelsSize="9dp"
                app:chart_lineColor="@color/orange"
                app:chart_lineThickness="1dp"
                app:chart_smoothLine="false"
                app:chart_pointsDrawable="@drawable/ic_baseline_remove_circle_24"/>


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="ยอดขายทั้งหมด"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            <com.db.williamchart.view.BarChartView
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:padding="10dp"
                android:background="@color/orange"
                app:chart_labelsColor="@color/white"
                app:chart_labelsSize="9dp"
                app:chart_spacing="20dp"
                app:chart_barsColor="@color/yellow"
                app:chart_barsBackgroundColor="@color/beige"
                app:chart_barsRadius="10dp" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>